@@ -1,3 +1,5 @@
+- optimized @decorator
+
 0.10
 - added is_tuple()
 - raiser() can now be called without arguments, defaults to Exception
